--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/plugins/vim-gotham"]
 	path = vim/plugins/vim-gotham
 	url = git@github.com:whatyouhide/vim-gotham.git
+[submodule "vim/plugins/tabnine-vim"]
+	path = vim/plugins/tabnine-vim
+	url = https://github.com/codota/tabnine-vim
