--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/plugins/glow.nvim"]
 	path = vim/plugins/glow.nvim
 	url = git@github.com:ellisonleao/glow.nvim.git
+[submodule "vim/plugins/splitjoin.vim"]
+	path = vim/plugins/splitjoin.vim
+	url = git@github.com:AndrewRadev/splitjoin.vim.git
