feat: update tmux config with sesh integration and everforest theme
- Replace tmux-sessionx with sesh for faster session management
- Switch to everforest color scheme with duo theme
- Add automatic window renaming with smart command detection
- Position status bar at top for cleaner layout
- Add session management keybindings (N, L, X)
- Include tmux-nerd-font-window-name plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,7 @@ set -g mouse on
 
 # Set window title
 set -g set-titles on
-set -g set-titles-string '#h ❐ #S ● #I #W'
+set -g set-titles-string '#S ● #I #W'
 
 # =====================================
 # Window Options
@@ -36,6 +36,10 @@ set -g base-index 1
 
 # Renumber windows automatically when one is closed
 set -g renumber-windows on
+
+# Automatic window renaming based on current path/command
+setw -g automatic-rename on
+setw -g automatic-rename-format '#{?#{||:#{==:#{pane_current_command},zsh},#{==:#{pane_current_command},fish}},#{pane_current_command},#{?#{m/r:^[0-9]+\.[0-9]+\.[0-9]+$,#{pane_current_command}},claude,#{pane_current_command}}}(#{b:pane_current_path})'
 
 # Monitor window activity
 setw -g monitor-activity on
@@ -94,9 +98,16 @@ bind -r Tab select-pane -t :.+
 # =====================================
 # Create new session
 bind S new-session
+bind N new-session -d  # Create new session in background
 
 # Launch development environment
 bind D run-shell "~/.config/tmux/scripts/dev-env.sh"
+
+# Open new session in mycase directory
+bind L new-session -c "~/mycase/mycase_login"
+
+# Kill current session and switch to last
+bind X switch-client -l \; kill-session -t !
 
 # =====================================
 # Key Bindings - Window Management
@@ -130,27 +141,29 @@ unbind -T copy-mode-vi Enter
 # Enable status bar
 set -g status on
 set -g status-interval 5
-set -g status-position bottom
+set -g status-position top
 
 # =====================================
-# Theme Configuration - tmux2k
+# Theme Configuration - tmux2k with Everforest Colors
 # =====================================
-# Set theme
-set -g @tmux2k-theme 'catppuccin'
+# Use duo theme as base for custom colors
+set -g @tmux2k-theme 'duo'
 
-# Configure left and right status bar
-set -g @tmux2k-left-plugins "git cpu ram"
-set -g @tmux2k-right-plugins "battery network time"
+# Apply everforest colors to duo theme
+set -g @tmux2k-duo-fg '#d3c6aa'  # everforest fg
+set -g @tmux2k-duo-bg '#2d353b'  # everforest bg0
 
-# Configure window icons
-set -g @tmux2k-window-list-alignment 'centre'
-set -g @tmux2k-icons-only false
+# Minimal status bar - only essentials
+set -g @tmux2k-left-plugins "session"
+set -g @tmux2k-right-plugins "battery time"
 
-# Time format
-set -g @tmux2k-military-time true
+# Clean, minimal appearance
+set -g @tmux2k-show-powerline false
 
-# Network interface  
-set -g @tmux2k-network-name "en0"
+# Custom everforest colors
+set -g @tmux2k-light-green '#a7c080'  # everforest green
+set -g @tmux2k-light_blue '#7fbbb3'   # everforest blue
+set -g @tmux2k-bg-main '#2d353b'      # everforest bg0
 
 # =====================================
 # Plugin Configuration
@@ -159,27 +172,22 @@ set -g @tmux2k-network-name "en0"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin '2kabhishek/tmux2k'
-set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'omerxx/tmux-sessionx'  # Replaced with sesh
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 # =====================================
-# SessionX Configuration
+# Sesh Configuration (Fast Session Manager)
 # =====================================
-# SessionX key binding (default is prefix + o)
-set -g @sessionx-bind 'o'
+# Sesh key bindings - maximum performance
+# Main session switcher (optimized fzf)
+bind-key "o" display-popup -E -w 35% -h 60% \
+  "sesh connect \$(sesh list --icons | fzf --no-sort --no-info --no-scrollbar --cycle --reverse --ansi --bind='tab:down,shift-tab:up,ctrl-j:accept' --prompt='⚡ ')"
 
-# Preview location and size
-set -g @sessionx-window-height '85%'
-set -g @sessionx-window-width '75%'
-set -g @sessionx-preview-enabled 'true'
-set -g @sessionx-preview-location 'right'
-set -g @sessionx-preview-ratio '55%'
-
-# Additional settings
-set -g @sessionx-zoxide-mode 'on'  # Enable zoxide integration if installed
-set -g @sessionx-filter-current 'false'  # Include current session in list
-set -g @sessionx-legacy-fzf-support 'off'  # Use newer fzf features
+# Ultra-fast shortcuts (no fzf overhead)
+bind-key "O" run-shell "sesh connect \$(sesh list -t | head -1)"  # Connect to last session instantly
+bind-key "C-o" run-shell "sesh connect \$(pwd)"  # Connect to current directory instantly
 
 # =====================================
 # Resurrect & Continuum Configuration
@@ -198,7 +206,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 # Additional programs to restore
-set -g @resurrect-processes 'ssh node npm yarn "npm start" "npm run" "yarn start" "yarn dev"'
+# set -g @resurrect-processes 'ssh node npm yarn "npm start" "npm run" "yarn start" "yarn dev"'
 
 # =====================================
 # Plugin Manager Initialization
