--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -175,7 +175,7 @@ set -g @plugin '2kabhishek/tmux2k'
 # set -g @plugin 'omerxx/tmux-sessionx'  # Replaced with sesh
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'  # Optional: Install with prefix+I if needed
 
 # =====================================
 # Sesh Configuration (Fast Session Manager)
