feat: add installation and health check scripts
- Add install.sh for automated setup on macOS/Linux
- Add check.sh for configuration health checks
- Add secrets.fish.example template for API keys
- Add starship.toml for prompt configuration
- Clean up legacy files (.gitmodules, fish_variables)
- Update fish .gitignore for runtime files

--- a/fish/.gitignore
+++ b/fish/.gitignore
@@ -1,8 +1,9 @@
 # Ignore secrets file containing API keys and sensitive data
 secrets.fish
 
-# Ignore fish history
+# Ignore fish runtime state
+fish_variables
 fish_history
 
-# Ignore generated files
+# Ignore generated files  
 fishd.*
